non-msrv-tests/tests/ui/trait.stderr
error: `T` isn't a supported trait
 --> tests/ui/trait.rs:1:30
  |
1 | #[derive_where::derive_where(T)]
  |                              ^
